[package]
name = "merenda"
version = "0.1.0"
edition = "2021"
description = "Snack-sized clipboard syncronization over SSH"
license = "GPL-3.0"
repository = "https://github.com/Palladinium/merenda"
categories = ["command-line-utilities"]
keywords = ["clipboard"]

[dependencies]
arboard = { version = "3.2.1", default-features = false, features = ["wayland-data-control"] }
argh = "0.1.12"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
